--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,58 @@ body{
 }
 
 .container{
+    height: 550px;
     margin-top: 150px;
     margin-left: 0 auto;
     margin-right: 0 auto;
     background-color: whitesmoke;
 }
+
+@keyframes shimmerBackground {
+    0% {background-position:-5000px 0}
+    100% {background-position:5000px 0}
+}
+
+.shimmer
+{
+background-image: -moz-linear-gradient(160deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 25%, rgba(255,255,255,0.85) 60%, rgba(255,255,255,0) 100%);
+background-image: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(25%,rgba(255,255,255,0)), color-stop(60%,rgba(255,255,255,0.85)), color-stop(100%,rgba(255,255,255,0)));
+background-image: -webkit-linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
+background-image: -o-linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
+background-image: -ms-linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
+background-image: linear-gradient(160deg, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 25%,rgba(255,255,255,0.85) 60%,rgba(255,255,255,0) 100%);
+background-repeat: repeat-y;
+background-position:-5000px 0;
+animation: shimmerBackground 8s linear infinite;
+}
+
+#title{
+    text-align: center;
+    padding: 50px;
+    font-size: 100px;
+    color: rgb(2, 2, 29);
+  }
+
+  #subtitle{
+      font-size: 75;
+  }
+
+  #intro{
+      text-align: center;
+      font-size: 20px;
+  }
+
+#start-button{
+   padding: 10px;
+   padding-left: 20px;
+   padding-right: 20px;
+   /* margin-left: 1000px; */
+   /* margin-top: 50px; */
+    background-color: lightblue;
+}
+
+.timerLabel{
+    font-size: 80px;
+    color: orange;
+}
+
